Fix horizontal overflow on full width blocks.

--- a/styles/article.css
+++ b/styles/article.css
@@ -159,8 +159,10 @@
   }
 
   & .notion-asset-wrapper-full:has(iframe) {
-    border-top: 1px solid var(--color-gray-200);
-    border-bottom: 1px solid var(--color-gray-200);
+    border: 1px solid var(--color-gray-200);
+    border-radius: 3px;
+    overflow: hidden;
+    max-width: calc(100vw - 32px);
   }
 
   & .notion-asset-wrapper:not(.notion-asset-wrapper-full):has(iframe) {
@@ -192,6 +194,7 @@
   }
 
   & .exec-code__content {
+    width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -200,13 +203,10 @@
   }
 
   & .exec-code--full {
-    max-width: 100vw;
+    /* Pad with 16px on each side to avoid horizontal overflow */
+    /* https://destroytoday.com/blog/100vw-and-the-horizontal-overflow-you-probably-didnt-know-about */
+    width: calc(100dvw - 32px);
     align-self: center;
-  }
-
-  & .exec-code--full .exec-code__content {
-    width: 100vw;
-    max-width: 100%;
   }
 
   & .exec-code__loading {
